--- a/client/src/components/Registration.css
+++ b/client/src/components/Registration.css
@@ -1,12 +1,12 @@
 .regd-form{
-    margin: 2rem;
-    background-color: rgb(52, 52, 75);
     color: white;
+    border: 1px solid rgb(52, 52, 75);
+    margin: 5rem;
 
 }
 .regd-form input{
     height: 2rem;
-    width: 15rem;
+    width: 80%;
 }
 form{
     padding: 3rem;
