--- a/client/src/components/Registration.css
+++ b/client/src/components/Registration.css
@@ -16,3 +16,12 @@ a:hover{
     color: white;
     background-color: rgb(52, 52, 75);
 }
+.regd-btn{
+    color: white;
+    background-color: black;
+    cursor: pointer;
+}
+.regd-btn:hover{
+    color: black;
+    background-color: white;
+}
